turtleart.lessons.turtleart.Main.Square.scala.error
Source:3: error: '<-' expected but ')' found.
	for (i< 1 to 4){
                      ^Source:7: error: illegal start of simple expression
}
^